<resources>
    <string name="app_name">MeteOrsago</string>
    <string name="webcam_image_content_description">webcam_image</string>
    <string name="ext_temp">Temperatura esterna</string>
    <string name="wind">Velocità del vento</string>
    <string name="int_temp">Temperatura interna</string>
    <string name="press">Pressione</string>
    <string name="int_hum">Umidità interna</string>
    <string name="ext_hum">Umidità esterna</string>
    <string name="daily_rain">Pioggia odierna</string>
    <string name="wind_temp">Temperatura del vento</string>
    <string name="hour_rain">Pioggia ultim\'ora</string>
    <string name="rug_temp">Temperatura rugiada</string>
    <string name="year_rain">Pioggia annua</string>
    <string name="max_temp">Temperatura esterna massima</string>
    <string name="min_temp">Temperatura esterna minima</string>
    <string name="max_wind">Velocità del vento massima</string>
    <string name="feel_temp">Temperatura percepita</string>
    <string name="data_placeholder">10 Km/h</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="last_measure_time">Ultimo aggiornamento</string>
    <string name="rate_us">Feedback!</string>
    <string name="lightning">Mappa Fulmini</string>
    <string name="website">Sito Web</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="cd_trend">Trend</string>
    <string name="info">Info</string>
    <string name="creator">Sviluppatore: Alberto Giust</string>
    <string name="bio">Sono uno studente di informatica all\'Università degli Studi Di Trento (TN). E\' stata creata in collaborazione con il sito MeteOrsago, da cui prendo i dati.</string>
    <string name="contact_me">Contattami</string>
    <string name="email">alberto.giust21@gmail.com</string>
    <string name="phone">+393425054003</string>
    <string name="email_image">Image of an email</string>
    <string name="image_phone">Image of a phone</string>
    <string name="info_dev">Dev Info</string>
    <string name="info_app">App Info</string>
    <string name="version">Versione</string>
    <string name="version_placeholder">1.0.0</string>
    <string name="forecast_image_content_description">Forecast Image</string>
    <string name="date">Giorno 0</string>
    <string name="forecast_time_placeholder">mattina</string>
</resources>
