<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="Home"
            android:icon="@drawable/ic_home"></item>
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_list"
            android:title="Dati Meteo Completi"
            ></item>
        <item
            android:id="@+id/nav_webcam"
            android:icon="@drawable/ic_webcam"
            android:title="Webcam"
            ></item>

    </group>

    <group
        android:id="@+id/utilities">

        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_web"
            android:title="@string/website"></item>

        <item
            android:id="@+id/nav_lightning"
            android:icon="@drawable/ic_lightning"
            android:title="@string/lightning"></item>

        <item android:id="@+id/nav_rate_us"
            android:title="@string/rate_us"
            android:icon="@drawable/ic_feedback_black_24dp"
            />
    </group>

</menu>